sfdx-project/force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <!-- Assigns Order_Record_Page (the flexipage with the occOrderDeliveryMap LWC) as the record
         page. Without these two overrides a fresh org deploys the page but never shows it.
         Only these were copied from the org: the file stays a curated subset, and sharingModel
         must not be changed (see CLAUDE.md, standing constraint 1). -->
    <label>Order</label>
    <pluralLabel>Orders</pluralLabel>
    <nameField>
        <label>Order Name</label>
        <type>AutoNumber</type>
        <displayFormat>O-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>