sfdx-project/force-app/main/default/objects/Order__c/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <label>Current Location</label>
    <description>Where the parcel is right now, as reported by the carrier. Populated for Shipped orders only. Query the components as Current_Location__Latitude__s / Current_Location__Longitude__s.</description>
    <scale>6</scale>
    <type>Location</type>
</CustomField>