sfdx-project/force-app/main/default/objects/Order__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <type>Text</type>
    <length>255</length>
</CustomField>