sfdx-project/force-app/main/default/objects/Order__c/fields/Location_Updated__c.field-meta.xml
<CustomField>
    <fullName>Location_Updated__c</fullName>
    <label>Location Updated</label>
    <description>When Current_Location__c was last reported. The agent says "as of ..." so a stale position is never presented as live GPS.</description>
    <type>DateTime</type>
</CustomField>