sfdx-project/force-app/main/default/objects/Order__c/fields/Return_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Return_Eligible__c</fullName>
    <label>Return Eligible</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>